k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscription-tracker
spec:
  selector:
    app: subscription-tracker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
